Finish dockerFile auth-service

--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,25 +1,54 @@
 # /godet-services/auth-service/Dockerfile
 
-FROM node:18-alpine
+# --- STAGE 1: Builder ---
+# Installe les dépendances de développement et compile le code TypeScript
+FROM node:18-alpine3.18 AS builder
 
-# On définit le répertoire de travail
 WORKDIR /app
 
-# On copie UNIQUEMENT les package.json du projet qui nous intéressent
-# `pnpm` a besoin du fichier de la racine et du workspace courant
-COPY package.json pnpm-lock.yaml ./
-COPY auth-service/package.json ./auth-service/
+# Installer pnpm
+RUN npm install -g pnpm
 
-# On installe UNIQUEMENT les dépendances de production pour ce workspace
-# L'option --prod est cruciale
-RUN pnpm install --prod --frozen-lockfile
+# Copier les manifests et le schéma Prisma
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
-# On copie le reste du code du service
+# Copier le reste du code source pour la compilation (y compris tsconfig.json)
 COPY auth-service/ ./auth-service/
 
-# On copie le schéma prisma pour pouvoir générer le client
-COPY prisma/ ./prisma/
-RUN pnpm -F auth-service exec prisma generate
+# Installer TOUTES les dépendances (y compris dev) pour avoir accès à TypeScript
+# Le script postinstall génère le client Prisma, ce qui est bien mais sera refait en prod
+RUN pnpm install --filter auth-service --frozen-lockfile
 
-# Commande pour lancer le service
-CMD [ "pnpm", "-F", "auth-service", "run", "start" ]
+
+# Builder le projet (tsc)
+RUN pnpm --filter auth-service run build
+
+
+# --- STAGE 2: Production ---
+# Crée l'image finale, optimisée, avec uniquement les dépendances de production
+FROM node:18-alpine3.18
+
+# Installer la dépendance OpenSSL requise par Prisma
+RUN apk add --no-cache openssl1.1-compat
+
+ENV NODE_ENV=production
+WORKDIR /app
+
+# Installer pnpm
+RUN npm install -g pnpm
+
+# Copier les manifests et le schéma pour l'installation de production
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
+COPY auth-service/package.json ./auth-service/
+COPY auth-service/prisma ./auth-service/prisma/
+
+# Installer UNIQUEMENT les dépendances de production.
+# Le script `postinstall` ("prisma generate") est exécuté ici, ce qui garantit
+# que le client Prisma est généré correctement pour l'environnement final.
+RUN pnpm install --filter auth-service --prod --frozen-lockfile
+
+# Copier le code JavaScript compilé dans son répertoire d'origine
+COPY --from=builder /app/auth-service/dist ./auth-service/dist
+
+# Lancer le serveur depuis son emplacement d'origine, ce qui assure la résolution des modules
+CMD [ "node", "auth-service/dist/server.js" ]
