--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -4,6 +4,7 @@
   "description": "A simple Express authentication service API",
   "main": "dist/server.js",
   "scripts": {
+    "postinstall": "prisma generate",
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
@@ -17,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.15.1",
+    "prisma": "^5.15.1",
     "@types/pino-http": "^5.8.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -36,7 +38,6 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.2",
-    "prisma": "^5.15.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
