--- a/logstash/pipeline.conf
+++ b/logstash/pipeline.conf
@@ -21,4 +21,10 @@ output {
     hosts => ["http://elasticsearch:9200"]
     index => "godet-services-%{+YYYY.MM.dd}"
   }
+  opensearch {
+    hosts => ["${OPENSEARCH_URL}"]
+    index => "godet-services-%{+YYYY.MM.dd}"
+    ssl => true
+    ssl_certificate_verification => true
+  }
 }
