--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -18,7 +18,6 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.15.1",
-    "prisma": "^5.15.1",
     "@types/pino-http": "^5.8.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -26,6 +25,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "pino-http": "^10.5.0",
+    "prisma": "^5.15.1",
+    "redis": "^5.5.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
