--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,69 +50,41 @@ jobs:
           # Save the image URI for the next step
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-      - name: Create ECS task definition from docker-compose
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
-          IMAGE_TAG: ${{ github.sha }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          REDIS_URL: ${{ secrets.REDIS_URL }}
-          FRONTEND_URL: ${{ secrets.FRONTEND_URL }}
-          ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
-          REFRESH_TOKEN_SECRET: ${{ secrets.REFRESH_TOKEN_SECRET }}
+      - name: Prepare task definition
+        id: prepare-task-def
         run: |
-          # Install AWS ECS CLI
-          curl -o /usr/local/bin/ecs-cli https://amazon-ecs-cli.s3.amazonaws.com/ecs-cli-linux-amd64-latest
-          chmod +x /usr/local/bin/ecs-cli
-          
-          # Create task definition from docker-compose
-          ecs-cli compose --file docker-compose.ecs.yml \
-            --project-name godet-services \
-            --cluster ${{ env.ECS_CLUSTER }} \
-            --ecs-params ecs-params.yml \
-            create
+          # On remplace les placeholders dans notre template par les vraies valeurs
+          sed -i "s|IMAGE_URI_PLACEHOLDER|${{ steps.build-image.outputs.image }}|g" ecs-task-definition.json
+          sed -i "s|SECRET_ARN_PLACEHOLDER|${{ secrets.AWS_SECRETS_MANAGER_ARN }}|g" ecs-task-definition.json
+          sed -i "s|ACCOUNT_ID|${{ secrets.AWS_ACCOUNT_ID }}|g" ecs-task-definition.json
 
-      - name: Deploy to ECS using docker-compose
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
-          IMAGE_TAG: ${{ github.sha }}
-          DATABASE_URL: ${{ secrets.ARN_SECRET_MANAGER:DATABASE_URL }}
-          REDIS_URL: ${{ secrets.ARN_SECRET_MANAGERREDIS_URL }}
-          FRONTEND_URL: ${{ secrets.ARN_SECRET_MANAGER:FRONTEND_URL }}
-          ACCESS_TOKEN_SECRET: ${{ secrets.ARN_SECRET_MANAGER:ACCESS_TOKEN_SECRET }}
-          REFRESH_TOKEN_SECRET: ${{ secrets.ARN_SECRET_MANAGER:REFRESH_TOKEN_SECRET }}
-        run: |
-          # Deploy using ECS CLI
-          ecs-cli compose --file docker-compose.ecs.yml \
-            --project-name godet-services \
-            --cluster ${{ env.ECS_CLUSTER }} \
-            --ecs-params ecs-params.yml \
-            service up --force-deployment
+      - name: Deploy Amazon ECS task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ecs-task-definition.json
+          service: ${{ env.ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
 
       - name: Wait for service stability
         run: |
           aws ecs wait services-stable \
             --cluster ${{ env.ECS_CLUSTER }} \
-            --services godet-services
+            --services ${{ env.ECS_SERVICE }}
 
       - name: Run database migrations
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
-          DATABASE_URL: ${{ secrets.ARN_SECRET_MANAGER:DATABASE_URL }}
-          REDIS_URL: ${{ secrets.ARN_SECRET_MANAGER:REDIS_URL }}
-          FRONTEND_URL: ${{ secrets.ARN_SECRET_MANAGER:FRONTEND_URL }}
-          ACCESS_TOKEN_SECRET: ${{ secrets.ARN_SECRET_MANAGER:ACCESS_TOKEN_SECRET }}
-          REFRESH_TOKEN_SECRET: ${{ secrets.ARN_SECRET_MANAGER:REFRESH_TOKEN_SECRET }}
         run: |
           # Run migrations using ECS CLI
-          ecs-cli compose --file docker-compose.ecs.yml \
-            --project-name godet-services \
+          aws ecs run-task \
             --cluster ${{ env.ECS_CLUSTER }} \
-            --ecs-params ecs-params.yml \
-            run --rm auth-service pnpm exec prisma migrate deploy
+            --task-definition godet-auth-service \
+            --launch-type FARGATE \
+            --network-configuration "awsvpcConfiguration={subnets=[${{ secrets.SUBNET_IDS }}],securityGroups=[${{ secrets.SECURITY_GROUP_IDS }}],assignPublicIp=ENABLED}" \
+            --overrides '{"containerOverrides":[{"name":"auth-service","command":["pnpm","exec","prisma","migrate","deploy"]}]}'
 
       - name: Notify deployment status
         if: always()
