--- a/logstash/pipeline.prod.conf
+++ b/logstash/pipeline.prod.conf
@@ -1,87 +1,29 @@
-# Configuration Logstash pour la production avec Elasticsearch
+# Ce fichier est la configuration de notre pipeline Logstash.
 
-# Entrée : On écoute les logs envoyés via le protocole GELF
+# Entrée : On écoute les logs envoyés via le protocole GELF.
 input {
   gelf {}
 }
 
 filter {
-  # Parser le message JSON de pino
+  # On dit à Logstash de prendre le champ "message"...
   json {
     source => "message"
   }
-  
-  # Ajouter des métadonnées pour la production
-  mutate {
-    add_field => {
-      "environment" => "production"
-      "service" => "auth-service"
-    }
-  }
-  
-  # Traitement des champs de requête et réponse
-  if [req] {
-    mutate {
-      add_field => {
-        "request_method" => "%{[req][method]}"
-        "request_url" => "%{[req][url]}"
-        "request_id" => "%{[req][id]}"
-      }
-    }
-  }
-  
-  if [res] {
-    mutate {
-      add_field => {
-        "response_status" => "%{[res][statusCode]}"
-        "response_time" => "%{[res][responseTime]}"
-      }
-    }
-  }
-  
-  # Ajouter un timestamp si nécessaire
-  if [time] {
-    date {
-      match => [ "time", "UNIX_MS" ]
-      target => "@timestamp"
-    }
-  }
+  # ...et de le parser comme du JSON.
+  # Par défaut, les champs parsés (level, time, req, res, resBody)
+  # seront ajoutés à la racine du log.
 }
 
-# Sortie : On envoie les logs vers Elasticsearch
+# Sortie : On envoie les logs directement à Opensearch.
 output {
-  elasticsearch {
-    hosts => ["http://elasticsearch:9200"]
+  opensearch {
+    # L'URL de votre domaine OpenSearch, passée via une variable d'environnement
+    hosts => ["${OPENSEARCH_DOMAIN_ENDPOINT}"]
+    # Les identifiants du Master User que vous avez créé
+    user => "${OPENSEARCH_MASTER_USER}"
+    password => "${OPENSEARCH_MASTER_PASSWORD}"
     index => "godet-services-prod-%{+YYYY.MM.dd}"
-    template_name => "godet-services-prod"
-    template_overwrite => true
-    template => {
-      "index_patterns" => ["godet-services-prod-*"]
-      "settings" => {
-        "number_of_shards" => 1
-        "number_of_replicas" => 0
-      }
-      "mappings" => {
-        "properties" => {
-          "@timestamp" => { "type" => "date" }
-          "level" => { "type" => "keyword" }
-          "msg" => { "type" => "text" }
-          "service" => { "type" => "keyword" }
-          "environment" => { "type" => "keyword" }
-          "request_method" => { "type" => "keyword" }
-          "request_url" => { "type" => "text" }
-          "request_id" => { "type" => "keyword" }
-          "response_status" => { "type" => "integer" }
-          "response_time" => { "type" => "integer" }
-        }
-      }
-    }
+    # ... autres options si nécessaire
   }
-  
-  # Sortie de debug pour les erreurs (optionnel)
-  if [level] == "error" {
-    stdout {
-      codec => rubydebug
-    }
-  }
-} 
+}
